implement test for checkout